refactor: VoucherController - 디버깅, 가독성을 위해 변수 분리